# FelixCloner

./: CMakeLists.txt  README.md
src/: felix.cpp  matrix.cpp  utils.cpp
tests/: CMakeLists.txt  test.cpp
